--- a/_includes/team.html
+++ b/_includes/team.html
@@ -14,7 +14,11 @@
 	  <div class="team-member">
 		<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
 		<h4>{{ person.name }}</h4>
-		<p class="text-muted">{{ person.role }}</p>
+		<p class="text-muted">{{ person.role }}
+			<span class="text-muted" style="display: block;">{{ person.email }}</span>
+		</p>
+	
+
 		<ul class="list-inline social-buttons">
 		{% for network in person.social %}
 		  <li class="list-inline-item">
