--- a/_includes/details.html
+++ b/_includes/details.html
@@ -1,7 +1,8 @@
 <!-- Services -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
   <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
-    <div class="container">
+    <!-- style="padding-right: 10%;padding-left: 10%;" -->
+    <div class="container" >
 	
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -14,7 +15,7 @@
 	  
       <div class="row text-center">
 	  {% for service in site.data.sitetext[site.locale].services.list %}
-        <div class="col-md-3">
+        <div class="col-lg-3">
           <!-- <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="{{ service.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
