--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="intro-text">
 	  {%- if site.data.sitetext[site.locale].header.title -%}
-        <div class="intro-lead-in">{{ site.data.sitetext[site.locale].header.title | markdownify }}</div>
+        <div class="intro-lead-in">{{ site.data.sitetext[site.locale].header.title | markdownify }} <span style="display: block; font-size: 1.4rem; font-weight: 300;color: white;">{{ site.data.sitetext[site.locale].header.subtitle | markdownify }}</span></div>
 	  {%- endif -%}
 	  {%- if site.data.sitetext[site.locale].header.text -%}
         <div class="intro-heading text-uppercase">{{ site.data.sitetext[site.locale].header.text | markdownify }}</div>
