--- a/_includes/details.html
+++ b/_includes/details.html
@@ -3,12 +3,13 @@
   <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
     <!-- style="padding-right: 10%;padding-left: 10%;" -->
     <div class="container" >
-	
+      <p>{{ site.data.sitetext[site.locale].services.description }}</p>
+      <br/>
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].services.title }}</a></h2>
           {% if site.data.sitetext[site.locale].services.text %}
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].services.text }}</h3>
+		  <h3 class="section-subheading text-muted" style="font-weight: bold; color: rgb(255, 91, 91) !important">{{ site.data.sitetext[site.locale].services.text }}</h3>
 		  {% endif %}
         </div>
       </div>
