added random t to header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
   <meta http-equiv="pragma" content="no-cache" />
   <!-- Custom styles for this theme -->
   <!--<link href="assets/css/agency.min.css" rel="stylesheet">-->
-  <link href="assets/css/agency.css" rel="stylesheet" />
+  <link href="assets/css/agency.css?t=100" rel="stylesheet" />
 
   <!-- Page container change top padding when nav shrinks -->
   {% if page.layout == "page" %}
